k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopapp-mysql
  labels:
    app: shopapp-mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopapp-mysql
  template:
    metadata:
      labels:
        app: shopapp-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: shopapp-mysql-pvc
