k8s/shopapp-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopapp-backend
  labels:
    app: shopapp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopapp-backend
  template:
    metadata:
      labels:
        app: shopapp-backend
    spec:
      containers:
        - name: shopapp-backend
          image: harsh042/shopapp-backend:v1.0.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
