k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapp-mysql
spec:
  type: ClusterIP
  selector:
    app: shopapp-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
