k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapp-redis
spec:
  type: ClusterIP
  selector:
    app: shopapp-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
