k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
