k8s/shopapp-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapp-backend-service
spec:
  type: ClusterIP
  selector:
    app: shopapp-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
