k8s/shopapp-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapp-frontend-service
spec:
  type: NodePort
  selector:
    app: shopapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
